# 3DNav

./: .gitignore  CMakeLists.txt  README.md
data/nanocarpro/meshes/: back_left_wheel_link.STL  back_right_wheel_link.STL  base_laser_link.STL  front_left_wheel_link.STL  front_right_wheel_link.STL
data/nanocarpro/urdf/: nanocarpro copy.urdf  nanocarpro.urdf  nanocarpro_description.gazebo.xacro  nanocarpro_description.urdf  nanocarpro_description.urdf.xacro  nanocarpro_gz.urdf
rl/: .gitignore  CMakeLists.txt  build_debug.sh  build_develop.sh
rl/Nanocar_SAC_0-6-29/: recorder.npy
rl/Nanocar_SAC_1/: recorder.npy
rl/raisimGymTorch/algo/elegantrl/: AgentBase.py  AgentSAC.py  RewardAnalyzer.py  __init__.py  config.py  evaluator.py  net.py  replay_buffer.py  run.py
rl/raisimGymTorch/algo/lattice_planner/: fre_coord.py  lattice.py  tools.py
rl/raisimGymTorch/algo/lattice_planner/lattice_planner/: fre_coord.py  lattice.py  tools.py
rl/raisimGymTorch/algo/ppo/: ppo.py
rl/raisimGymTorch/algo/sac/: buffer.py  buffer_gpt.py  cnn.py  lstm.py  mlp.py  rnn.py  sac.py  sac_gpt.py  sac_new.py
rl/raisimGymTorch/algo/sac/common/: policy_networks.py  value_networks.py
rl/raisimGymTorch/env/: EleRLRaisimGymVecEnv.py  NewRaisimGymVecEnv.py  RewardAnalyzer.py
rl/raisimGymTorch/env/envs/husky/: Environment.hpp  cfg.yaml  elevationMap.hpp  lidar.hpp  new_sac_runner.py  parameters.hpp  runner.py  sac_runner.py
rl/raisimGymTorch/env/envs/nanocar/: Environment.hpp  cfg.yaml  elevationMap.hpp  lidar.hpp  manual_tester.py  (+5 more)
src/: elevationMap.cpp  lidar.hpp  rayDemo2.cpp
